--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="first">
             <div class="head">
                 <div class="img">
-                    <img src="/image/envato.svg" style="height:20px; width: 200px;">
+                    <img src="./image/envato.svg" style="height:20px; width: 200px;">
 
 
                 </div>
@@ -25,16 +25,16 @@
         <div class="line">
             <h1>patidarsunita12119@gmail.com</h1>
             <div class="logo">
-                <img src="/image/gog.png" style="height: 30px; width: 30;border-radius: 100%;">
-                <img src="/image/link.png" style="height: 30px; width: 30;border-radius: 100%;">
-                <img src="/image/facebook.png" style="height: 30px; width: 30; border-radius: 100%;">
-                <img src="/image/twiter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                <img src="./image/gog.png" style="height: 30px; width: 30;border-radius: 100%;">
+                <img src="./image/link.png" style="height: 30px; width: 30;border-radius: 100%;">
+                <img src="./image/facebook.png" style="height: 30px; width: 30; border-radius: 100%;">
+                <img src="./image/twiter.png" style="height: 30px; width: 30;border-radius: 100%;">
             </div>
         </div>
         
         <div class="titles">
             <div class="img">
-                <img src="/image/logo.webp" style="height: auto;max-width: 110px; ">
+                <img src="./image/logo.webp" style="height: auto;max-width: 110px; ">
             </div>
             <div class="nav">
                 <div>HOME</div>
@@ -58,43 +58,43 @@
         <div class="box">
             <div class="first">
             <div class="img">
-                <img src="/image/1.webp" style="border-radius: 100%;">
+                <img src="./image/1.webp" style="border-radius: 100%;">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
             </div>
             <div class="first">
                 <div class="img">
-                <img src="/image/2.webp" style="border-radius: 100%;">
+                <img src="./image/2.webp" style="border-radius: 100%;">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
             </div>
             <div class="first">
                 <div class="img">
-                <img src="/image/3.webp" style="border-radius: 100%">
+                <img src="./image/3.webp" style="border-radius: 100%">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
             </div>
@@ -105,10 +105,10 @@
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
         </div>
@@ -116,29 +116,29 @@
         <div class="box2">
             <div class="first">
                 <div class="img">
-                <img src="/image/4.webp"style="border-radius: 100%">
+                <img src="./image/4.webp"style="border-radius: 100%">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
             </div>
             <div class="first">
                 <div class="img">
-                    <img src="/image/3.webp"style="border-radius: 100%">
+                    <img src="./image/3.webp"style="border-radius: 100%">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
             </div>
             </div>
@@ -149,24 +149,24 @@
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
                 </div>
             </div>
             <div class="first">
                 <div class="img">
-                <img src="/image/1.webp"style="border-radius: 100%">
+                <img src="./image/1.webp"style="border-radius: 100%">
                 <p>ROBIUL SIDDIKEE</p>
                 <p>Family Lwa Specialist</p>
                 <P>Lorem ipsum dolor sit amet ,miconsettur adimjpi sicinib elit,sed eiusquam epora.</P>
                 <div class="logo">
-                    <img src="/image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
-                    <img src="/image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
-                    <img src="/image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/limk.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/twitter.png" style="height: 30px; width: 30;border-radius: 100%;">
+                    <img src="./image/p.png" style="height: 30px; width: 30; border-radius: 100%;">
+                    <img src="./image/fac.png" style="height: 30px; width: 30;border-radius: 100%;">
                 </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 <h3>CONTACT INFOR</h3>
                 <div class="first">
                     <div class="img">
-                        <img src="/image/pho.jpg" style="height: 30px; width: 30px; border-radius: 100px;">
+                        <img src="./image/pho.jpg" style="height: 30px; width: 30px; border-radius: 100px;">
                     </div>
                     <p>+9098159460</p>
 
@@ -188,14 +188,14 @@
                 <div class="first">
 
                     <div class="img">
-                        <img src="/image/eml.png" style="height: 30px; width: 30px; border-radius: 100px;">
+                        <img src="./image/eml.png" style="height: 30px; width: 30px; border-radius: 100px;">
                     </div>
                     <p>sunita@gmail.com</p>
 
                 </div>
                 <div class="first">
                     <div class="img">
-                        <img src="/image/loc.png" style="height: 30px; width: 30px; border-radius: 100px;">
+                        <img src="./image/loc.png" style="height: 30px; width: 30px; border-radius: 100px;">
                     </div>
                     <p>vijay nagar</p>
                     <p>indore</p>
@@ -239,11 +239,11 @@
             <div class="footer4">
                 <h3>RELATED POST</h3>
                 <div class="second">
-                    <img src="/image/1 (1).webp">
-                    <img src="/image/2 (1).webp">
+                    <img src="./image/1 (1).webp">
+                    <img src="./image/2 (1).webp">
                     <div class="img">
-                        <img src=" /image/3 (1).webp">
-                        <img src="/image/4 (1).webp">
+                        <img src=" ./image/3 (1).webp">
+                        <img src="./image/4 (1).webp">
                     </div>
 
                 </div>
@@ -257,17 +257,17 @@
                 <p>made</p>
                 <p>with</p>
                 <div class="img">
-                    <img src="/image/hart1.jpg" style=" height: 20px; width: 20px;">
+                    <img src="./image/hart1.jpg" style=" height: 20px; width: 20px;">
                 </div>
                 <p>by</p>
                 <h4>HASTHEMES</h4>
             </div>
             <div class="fore">
-                <img src="/image/tw.png" style="height: 25px; width: 25;border-radius: 100%;">
-                <img src="/image/goog.png" style="height: 25px; width: 25;border-radius: 100%;">
-                <img src="/image/face.png" style="height: 25px; width: 25; border-radius: 100%;">
-                <img src="/image/li.png" style="height: 25px; width: 25;border-radius: 100%;">
-                <img src="/image/cam.jpg" style="height: 25px; width: 25;border-radius: 100%;">
+                <img src="./image/tw.png" style="height: 25px; width: 25;border-radius: 100%;">
+                <img src="./image/goog.png" style="height: 25px; width: 25;border-radius: 100%;">
+                <img src="./image/face.png" style="height: 25px; width: 25; border-radius: 100%;">
+                <img src="./image/li.png" style="height: 25px; width: 25;border-radius: 100%;">
+                <img src="./image/cam.jpg" style="height: 25px; width: 25;border-radius: 100%;">
 
 
             </div>
